# noise-cancellation

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
benches/: audio_processing.rs
config/: example.json
src/: config.rs  main.rs
src/audio/: capture.rs  manager.rs  mod.rs  playback.rs
src/dsp/: filters.rs  mod.rs  noise_gate.rs  spectral.rs  ultrasonic.rs
src/ui/: app.rs  audio_monitor.rs  mod.rs
